--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         We look forward to reaching new milestones together.<br><br>
         — <b>Team Cognizant</b>
-	<img src="Partnership.png" alt="Partnership" class="inline-img">
+	<img src="Partnership.PNG" alt="Partnership" class="inline-img">
 </div>
 </div>
 <script>
@@ -216,5 +216,6 @@ for (let i = 0; i < 40; i++) {
 </script>
 </body>
 </html>
+
 
  
