--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         We look forward to reaching new milestones together.<br><br>
         — <b>Team Cognizant</b>
-	<img src="Partnership.PNG" alt="Partnership" class="inline-img">
+	<img src="partnership.PNG" alt="Partnership" class="inline-img">
 </div>
 </div>
 <script>
@@ -219,3 +219,4 @@ for (let i = 0; i < 40; i++) {
 
 
  
+
