--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         🤝 Thank you for your continued partnership and trust.<br>
         We look forward to reaching new milestones together.<br><br>
         — <b>Team Cognizant</b>
-        <img src="Partnership.png" alt="Partnership" class="inline-img">
+        <img src="partnership.PNG" alt="Partnership" class="inline-img">
     </div>
 </div>
 
@@ -125,3 +125,4 @@ for (let i = 0; i < 40; i++) {
 </script>
 </body>
 </html>
+
